--- a/app/src/main/res/layout/criacao_prova_manual.xml
+++ b/app/src/main/res/layout/criacao_prova_manual.xml
@@ -12,5 +12,5 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard" />
+        android:text="Criação prova manual" />
 </RelativeLayout>
