--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.guilhermes.mobprof.login"
+    tools:context="com.example.guilhermes.mobprof.Login"
     tools:showIn="@layout/activity_login">
+
 
 </android.support.constraint.ConstraintLayout>
