--- a/app/src/main/res/layout/criacao_prova_aleatoria.xml
+++ b/app/src/main/res/layout/criacao_prova_aleatoria.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
+
+    <TextView
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/textView3"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Criação de Prova Aleatória"
+        android:layout_marginTop="10dp"/>
 
 
     <TextView
@@ -28,4 +37,4 @@
         android:layout_toEndOf="@+id/textViewAssunto"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp" />
-</RelativeLayout>
+</LinearLayout>
