--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context="com.example.guilhermes.mobprof.Login">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -47,8 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:onClick="recupersenha"
+        android:onClick="userRescue"
         android:text="Esqueci minha Senha" />
+
 
     <Button
         android:id="@+id/registrar"
