--- a/app/src/main/res/layout/content_registro.xml
+++ b/app/src/main/res/layout/content_registro.xml
@@ -11,8 +11,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.guilhermes.mobprof.Registro"
     tools:showIn="@layout/activity_registro"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
