--- a/app/src/main/res/layout/content_registro.xml
+++ b/app/src/main/res/layout/content_registro.xml
@@ -12,41 +12,42 @@
     tools:context="com.example.guilhermes.mobprof.Registro"
     tools:showIn="@layout/activity_registro"
     android:orientation="vertical">
+
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Formulário de Registro"
+        android:text="Recuperar Senha"
         android:textAppearance="?android:textAppearanceLarge"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Informe a Matricula"
+        android:id="@+id/matricula"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="70dp"
         />
 
     <EditText
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:hint="Tipo de Usuario"
-        android:id="@+id/new_CDTIPO"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="Informe o CPF"
+        android:id="@+id/senha"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        />
-
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:hint="Tipo de Usuario"
-        android:id="@+id/new_DSTIPO"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         />
 
     <Button
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:text="Registrar"
+        android:id="@+id/login"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:onClick="userReg"
-        />
+        android:text="OK" />
 
 </LinearLayout>
