--- a/app/src/main/res/layout/des_aluno.xml
+++ b/app/src/main/res/layout/des_aluno.xml
@@ -68,6 +68,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:onClick="onButtonClick"
+        android:onClick="chama"
         android:text="Pesquisar" />
 </LinearLayout>
