--- a/app/src/main/res/layout/pendencias.xml
+++ b/app/src/main/res/layout/pendencias.xml
@@ -8,29 +8,29 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dashboard"
+        android:text="Pendências"
         android:textAppearance="?android:textAppearanceLarge"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"/>
 
-    <Button
-        android:id="@+id/radioButton"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:text="04 - Provas para Avaliar"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@android:color/black"
         android:layout_marginTop="50dp"
-        android:checked="true"
-        android:text="Lembretes" />
-
+        android:textSize="24sp" />
     <Button
         android:id="@+id/radioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:text="Pendências" />
+        android:text="Guilherme" />
 
     <Button
         android:id="@+id/radioButton2"
@@ -39,7 +39,7 @@
 
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:text="Solicitar Disciplina" />
+        android:text="Gustavo" />
 
     <Button
         android:id="@+id/radioButton3"
@@ -48,7 +48,7 @@
 
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:text="Criar Avaliações" />
+        android:text="Gabriel" />
 
     <Button
         android:id="@+id/radioButton4"
@@ -57,7 +57,7 @@
 
         android:layout_marginTop="10dp"
         android:checked="true"
-        android:text="Avaliar Desempenho" />
+        android:text="Sarah" />
 
 
 </LinearLayout>
